--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   bloc: ^8.1.0
+  envied: ^0.2.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
@@ -18,6 +19,8 @@ dependencies:
 
 dev_dependencies:
   bloc_test: ^9.1.0
+  build_runner: ^2.3.0
+  envied_generator: ^0.2.3
   flutter_test:
     sdk: flutter
   mocktail: ^0.3.0
