--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
+  font_awesome_flutter: ^10.2.1
   intl: ^0.17.0
 
 dev_dependencies:
