--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
     sdk: flutter
   font_awesome_flutter: ^10.2.1
   intl: ^0.17.0
+  logger: ^1.1.0
+
 
 dev_dependencies:
   bloc_test: ^9.1.0
@@ -33,3 +35,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+
+  assets:
+    - assets/
